# xjump

./: .gitignore  COPYING  INSTALL  INSTALL.euc  Makefile  Makefile.am  README  README.euc  README.md  XJump.ad  configure.ac  copyright  game.c  icon.xbm  icon_msk.xbm  key.c  main.c  misc.c  picture.xpm  record.c  record.h  resource.c  xjump-icon.xpm  xjump.6  xjump.desktop  xjump.h
man/: Makefile.am
scripts/: check-desktop-files.sh
src/: Makefile.am  main.c  misc.c  record.c  record.h  resource.c  safestr.c  safestr.h  xjump.h
themes/: Makefile.am  ion.xpm  jumpnbump.xpm
